# HAL

./: README.md
Interfaces/: IGpio.h
mocks/: gpio_mock.cpp
mocks/gpio/: CMakeLists.txt  gpio_mock.cpp  gpio_mock.h
tests/: CMakeLists.txt
tests/gpio_mock/: CMakeLists.txt  main.cpp
